--- a/index.html
+++ b/index.html
@@ -6,39 +6,39 @@
     <title>Satan Temple</title>
     <link rel="icon" type="image/png" sizes="16x16" href="static/img/favicon.png">
 <!-- IONIC-->
-    <script src="https://satantemple.github.io/splide.min.js"></script>
-    <link rel="stylesheet" href="https://satantemple.github.io/splide.min.css">
+    <script src="https://diatermiaoficial.github.io/splide.min.js"></script>
+    <link rel="stylesheet" href="https://diatermiaoficial.github.io/splide.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
     <link rel=manifest href="https://ionic.io/ionicons/manifest.json">
-<meta property=og:title content="Satan Temple">
-<meta property=og:description content="Welcome to the Satan temple">
+<meta property=og:title content="Sitio oficial de Diatermia">
+<meta property=og:description content="Sitio oficial de Diatermia">
 <meta property=og:type content=website>
-<meta property=og:url content="https://satantemple.github.io">
-<meta property=og:image content="https://scontent.fbog2-4.fna.fbcdn.net/v/t39.2365-6/241505374_384968079990644_7017334203047759807_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=ad8a9d&_nc_eui2=AeERv7VpMZe-jVzR1npZsIgE5iPm7bZvc9nmI-bttm9z2edCnPR7jSVvOkAZuKf-pxsBbngdrI17rS507wIuYqJd&_nc_ohc=x5VI8aIRNAEAX_1Sa46&_nc_ht=scontent.fbog2-4.fna&oh=d90eb49a7505da93ddf8385828b9505e&oe=61870163">
+<meta property=og:url content="https://diatermiaoficial.github.io">
+<meta property=og:image content="https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-back01.jpeg">
 <meta name=twitter:card content=summary_large_image>
 <meta name=twitter:creator content=@ionicframework>
-<link rel="apple-touch-icon" sizes=57x57 href="https://ionic.io/ionicons/assets/img/meta/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes=60x60 href="https://ionic.io/ionicons/assets/img/meta/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes=72x72 href="https://ionic.io/ionicons/assets/img/meta/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes=76x76 href="https://ionic.io/ionicons/assets/img/meta/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes=114x114 href="https://ionic.io/ionicons/assets/img/meta/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes=120x120 href="https://ionic.io/ionicons/assets/img/meta/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes=144x144 href="https://ionic.io/ionicons/assets/img/meta/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes=152x152 href="https://ionic.io/ionicons/assets/img/meta/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes=180x180 href="https://ionic.io/ionicons/assets/img/meta/apple-icon-180x180.png">
-<link rel=icon type="image/png" href="https://ionic.io/ionicons/assets/img/meta/favicon-16x16.png" sizes=16x16>
-<link rel=icon type="image/png" href="https://ionic.io/ionicons/assets/img/meta/favicon-32x32.png" sizes=32x32>
-<link rel=icon type="image/png" href="https://ionic.io/ionicons/assets/img/meta/favicon-96x96.png" sizes=96x96>
+<link rel="apple-touch-icon" sizes=57x57 href="https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-fav.png">
+<link rel="apple-touch-icon" sizes=60x60 href="https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-fav.png">
+<link rel="apple-touch-icon" sizes=72x72 href="https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-fav.png">
+<link rel="apple-touch-icon" sizes=76x76 href="https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-fav.png">
+<link rel="apple-touch-icon" sizes=114x114 href="https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-fav.png">
+<link rel="apple-touch-icon" sizes=120x120 href="https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-fav.png">
+<link rel="apple-touch-icon" sizes=144x144 href="https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-fav.png">
+<link rel="apple-touch-icon" sizes=152x152 href="https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-fav.png">
+<link rel="apple-touch-icon" sizes=180x180 href="https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-fav.png">
+<link rel=icon type="image/png" href="https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-fav.png" sizes=16x16>
+<link rel=icon type="image/png" href="https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-fav.png" sizes=32x32>
+<link rel=icon type="image/png" href="https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-fav.png" sizes=96x96>
 <meta name="msapplication-TileColor" content=#da532c>
-<meta name="msapplication-TileImage" content="https://ionic.io/ionicons/assets/img/meta/ms-icon-70x70.png">
-<meta name="msapplication-TileImage" content="https://ionic.io/ionicons/assets/img/meta/ms-icon-144x144.png">
+<meta name="msapplication-TileImage" content="https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-fav.png">
+<meta name="msapplication-TileImage" content="https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-fav.png">
 <meta name="theme-color" content=#16161d>
 
-    <meta name="description" content="Welcome to Satan Temple">
-    <meta name="keywords" content="satan">
-    <meta name="author" content="Satan Temple">
+    <meta name="description" content="Sitio oficial de Diatermia">
+    <meta name="keywords" content="Diatermia">
+    <meta name="author" content="Diatermia">
 </head>
 <body>
 
@@ -106,7 +106,7 @@ function right01()
 </section>
  <section id="temple">
    <nav id="moon">
-     <a href="mailto:satantemplecom@gmail.com"> <ion-icon name="mail-unread-outline"></ion-icon> Contact us</a>
+     <a href="mailto:diatermiabanda@gmail.com"> <ion-icon name="mail-unread-outline"></ion-icon> Contacto</a>
    </nav>
    
         <div class="splide">
@@ -116,9 +116,9 @@ function right01()
                       <article class="love1">
                         <article class="love">
                          <div id="sigil"></div>
-                         <h1>Welcome to temple of true</h1>
-                         <h3>On this site users around the world can share your own experiences about the true and knowledge of our master.</h3>
-                         <a class="send" href="https://github.com/satantemple/satantemple.github.io/raw/main/satantemple.pdf">Download book</a>
+                         <h1>Sitio oficial de Diatermia</h1>
+                         <h3>Diatermia es una banda de Rock que emerge como respuesta a una sociedad en decadencia pero que manteniendo la verdadera cultura del Metal transforma las mentes de quienes escuchan música para oidos extremos.</h3>
+                         <a class="send" href="https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-advertencia.mp3">Descarga nuestro nuevo tema "Advertencia"</a>
                     </article>
                     </article>
                     </li>
@@ -126,9 +126,9 @@ function right01()
                       <article class="love2">
                         <article class="love">
                         <div id="sigil"></div>
-                         <h2>Welcome to temple of knowledge</h2>
-                         <h3>Making regular payments you can acces to special content.</h3>
-                         <a class="send" href="https://github.com/satantemple/satantemple.github.io/raw/main/satantemple.pdf">Download book</a>
+                         <h2>Descarga el single Advertencia</h2>
+                         <h3>Advertencia es parte de nuestro nuevo trabajo discográfico. Pronto en las principales aplicaciones y tiendas de música.</h3>
+                         <a class="send" href="https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-advertencia.mp3">Descarga nuestro nuevo tema "Advertencia"</a>
                     </article>
                         </article>
                     </li>
@@ -136,9 +136,9 @@ function right01()
                     <article class="love3">
                       <article class="love">
                         <div id="sigil"></div>
-                         <h2>Welcome to temple of Satan</h2>
-                         <h3>Download the bible of Satan by Anton Lavey and introduce yourself on Satan World.</h3>
-                         <a class="send" href="https://github.com/satantemple/satantemple.github.io/raw/main/satantemple.pdf">Download book</a>
+                         <h2>Atentos a nuevas fechas</h2>
+                         <h3>Diatermia sigue girando en las principales tarimas de tu ciudad. Atentos e nuevas fechas.</h3>
+                         <a class="send" href="https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-advertencia.mp3">Descarga nuestro nuevo tema "Advertencia"</a>
                     </article>
                       </article>
                     </li>
@@ -146,10 +146,10 @@ function right01()
           </div>
         </div>
    <nav id="sun">
-     <a href="https://www.facebook.com/satantemple"><ion-icon name="logo-facebook"></ion-icon> Members</a>
-     <a href="https://biz.payulatam.com/L0ccfcfF9178D3D"><ion-icon name="logo-paypal"></ion-icon> Payments</a>
+     <a href="https://www.facebook.com/Oficial.Vz"><ion-icon name="logo-facebook"></ion-icon> Facebook</a>
    </nav>
 </section>
+	<!--
   <section class="videos">
   <h4>Enjoy Satan Music and share with friends</h4>
   <div class="splide" id="splide02">
@@ -203,8 +203,8 @@ function right01()
 		</ul>
   </div>
 </div>
-</section>
-  <footer>© Copyright SatanTemple</footer>
+</section> -->
+  <footer>© Copyright Diatermia 2023</footer>
 <style type="text/css">
   .videos{padding:20px;background:red;text-align:center;}
   .splide{height:100%;}
@@ -215,17 +215,17 @@ function right01()
   footer{background:black;color:white;text-align:center;padding:30px;padding-bottom:90px;}
   html{width:100%;height:100%;}
   body{width:100%;height:100%;} 
-  #sigil{width:70px;height:70px;background:red url(https://raw.githubusercontent.com/satantemple/satantemple.github.io/main/sigil.png)no-repeat center center;background-size:110%;;margin:0 auto;border-radius:50%;margin-bottom:10px;}
-  .send{padding:10px 50px;background:red;color:black;border-radius:30px;font-size:20px;font-weight:bold;margin:5px 0px;display:inline-block;} 
+  #sigil{width:150px;height:150px;background:black url(https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-logo1.png)no-repeat center center;background-size:110%;;margin:0 auto;border-radius:50%;margin-bottom:10px;}
+  .send{padding:10px 50px;background:black;color:white;border-radius:30px;font-size:20px;font-weight:bold;margin:5px 0px;display:inline-block;} 
   .video{padding:10px;background:black;margin:5px;border-radius:5px;height:325px;} #moon{position:fixed;top:0;left:0;width:100%;height:60px;background:rgba(0,0,0,0.8);text-align:center;z-index:101;} 
 #sun{position:fixed;bottom:0;left:0;width:100%;height:60px;background:black;text-align:center;z-index:100;}
   #sun a{color:white;background:black;height:100%;display:inline-block;line-height:4;padding:0 20px;}
-  #moon a{color:red;background:rgba(255,255,255,0.1);height:100%;display:inline-block;line-height:4;padding:0 20px;}
+  #moon a{color:white;background:rgba(255,255,255,0.1);height:100%;display:inline-block;line-height:4;padding:0 20px;}
   #temple{width:100%;height:100%;background:black;padding-top:60px;} 
   .love{border-radius:3px;background:rgba(0,0,0,0.7);width:100%;height:100%;text-align:center;padding:10px 30px;}
-  .love1{background:url(https://raw.githubusercontent.com/satantemple/satantemple.github.io/main/02.jpg);no-repeat center center;background-size:cover;width:100%;height:100%;padding:10px;text-align:center;}
-  .love2{background:url(https://raw.githubusercontent.com/satantemple/satantemple.github.io/main/04.jpg);no-repeat center center;background-size:cover;width:100%;height:100%;padding:10px;text-align:center;}
-  .love3{background:url(https://raw.githubusercontent.com/satantemple/satantemple.github.io/main/05.jpg);no-repeat center center;background-size:cover;width:100%;height:100%;padding:10px;text-align:center;}
+  .love1{background:url(https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-back01.jpeg);no-repeat center center;background-size:cover;width:100%;height:100%;padding:10px;text-align:center;}
+  .love2{background:url(https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-back02.jpeg);no-repeat center center;background-size:cover;width:100%;height:100%;padding:10px;text-align:center;}
+  .love3{background:url(https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-logo1.png);no-repeat center center;background-size:cover;width:100%;height:100%;padding:10px;text-align:center;}
   h1{color:white;font-size:44px;}
   h2{color:white;font-size:44px;}
   h3{color:white;font-size:22px;padding:10px;}
