--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Satan Temple</title>
+    <title>Banda Diatermia</title>
     <link rel="icon" type="image/png" sizes="16x16" href="static/img/favicon.png">
 <!-- IONIC-->
     <script src="https://diatermiaoficial.github.io/splide.min.js"></script>
