--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ function right01()
                         <article class="love">
                          <div id="sigil"></div>
                          <h1>Sitio oficial de Diatermia</h1>
-                         <h3>Diatermia es una banda de Rock que emerge como respuesta a una sociedad en decadencia pero que manteniendo la verdadera cultura del Metal transforma las mentes de quienes escuchan música para oidos extremos.</h3>
+                         <h3>DIATERMIA es una banda que define su género cómo Rock/Metal y este a su vez se defineen una muy fuerte presencia del sonido que transmite. Con un repertorio totalmente inédito que logra hacer llegar al público un trance momentáneo en el que el fuerte sonido de una guitarra distorsionada junto a diversos efectos psicodélicos se mezclan y armonizan, con la cruda presencia de un bajo rítmicamente bien estructurado, que trae consigo una base sólida en la que enlaza un fuerte sonido junto a una batería métrica mente bien elaborada con una notable base rítmica , que no deja indiferente a nadie, a esta armonía musical se une la manera de expresar y lo que quiere transmitir la banda, bajo en enlace de una potente voz gutural Y armónica, llena de las más btrutales influencias , donde cada oración compuesta demuestra; la agresividad, el dominio y la filosofía de todo aquello que podemos ser, sin dejar de ser, Personas totalmente libres en nuestras propias vivencias.</h3>
                          <a class="send" href="https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-advertencia.mp3">Descarga nuestro nuevo tema "Advertencia"</a>
                     </article>
                     </article>
@@ -127,7 +127,7 @@ function right01()
                         <article class="love">
                         <div id="sigil"></div>
                          <h2>Descarga el single Advertencia</h2>
-                         <h3>Advertencia es parte de nuestro nuevo trabajo discográfico. Pronto en las principales aplicaciones y tiendas de música.</h3>
+                         <h3>Advertencia es parte de nuestro nuevo trabajo discográfico. Pronto en las principales aplicaciones y tiendas de música: Spotify, Apple Music, Amazon Music, YouTube, TikTok.</h3>
                          <a class="send" href="https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-advertencia.mp3">Descarga nuestro nuevo tema "Advertencia"</a>
                     </article>
                         </article>
