--- a/index.html
+++ b/index.html
@@ -147,6 +147,11 @@ function right01()
         </div>
    <nav id="sun">
      <a href="https://www.facebook.com/Oficial.Vz"><ion-icon name="logo-facebook"></ion-icon> Facebook</a>
+     <a href="https://www.instagram.com/diatermiaoficial"><ion-icon name="logo-instagram"></ion-icon> Instagram</a>
+	   <a href="#"><ion-icon name="logo-spotify"></ion-icon></a>
+	   <a href="#"><ion-icon name="logo-apple"></ion-icon></a>
+	   <a href="#"><ion-icon name="logo-amazon"></ion-icon></a>
+	   <a href="#"><ion-icon name="logo-tiktok"></ion-icon></a>
    </nav>
 </section>
 	<!--
