--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ function right01()
 </section>
  <section id="temple">
    <nav id="moon">
-     <a href="https://wa.link/u94lpm"> <ion-icon name="logo-whatsapp"></ion-icon></a>
+     <a href="https://wa.link/u94lpm"> <ion-icon name="logo-whatsapp">Contacto</ion-icon></a>
    </nav>
    
         <div class="splide">
