--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ function right01()
                         <article class="love">
                         <div id="sigil"></div>
                          <h2>Descarga el single Advertencia</h2>
-                         <h3>Advertencia es parte de nuestro nuevo trabajo discográfico. Pronto en las principales aplicaciones y tiendas de música: Spotify, Apple Music, Amazon Music, YouTube, TikTok.</h3>
+                         <h3>Advertencia es parte de nuestro nuevo trabajo discográfico. Ya en las principales aplicaciones y tiendas de música: Spotify, Apple Music, Amazon Music, YouTube, TikTok.</h3>
                          <a class="send" href="https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-advertencia.mp3">Descarga nuestro nuevo tema "Advertencia"</a>
                     </article>
                         </article>
@@ -232,7 +232,7 @@ function right01()
   .love3{background:url(https://raw.githubusercontent.com/diatermiaoficial/diatermiaoficial.github.io/main/diatermia-logo1.png);no-repeat center center;background-size:cover;width:100%;height:100%;padding:10px;text-align:center;}
   h1{color:white;font-size:44px;}
   h2{color:white;font-size:44px;}
-  h3{color:white;font-size:22px;padding:10px;}
+  h3{color:white;font-size:17px;padding:10px;}
   h4{color:white;font-size:22px;padding:10px;}
     #loader{text-align:center;z-index: 20;position: fixed;overflow: hidden;width: 100%;height: 100%;padding-top:15%;top:0;left: 0;}
     .loader{display: none;background: black url(static/img/logo.png)no-repeat center center;background-size:60px;}
